--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,8 @@ add_executable(haxed
     src/Shader.cpp
     src/os.h
     src/os.cpp
-    src/FontRenderer.h
-    src/FontRenderer.cpp
+    src/TextRenderer.h
+    src/TextRenderer.cpp
     src/Buffer.h
     src/Buffer.cpp
     src/types.h
