--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "external/icons"]
 	path = external/icons
 	url = https://github.com/PKief/vscode-material-icon-theme.git
+[submodule "external/stb"]
+	path = external/stb
+	url = https://github.com/nothings/stb.git
