--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/cJSON"]
 	path = external/cJSON
 	url = https://github.com/DaveGamble/cJSON
+[submodule "external/icu"]
+	path = external/icu
+	url = https://github.com/unicode-org/icu.git
