Implement status messages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(haxed
     src/main.cpp
     src/common.cpp
     src/modes.cpp
+    src/StatusMsg.cpp
     src/App.cpp
     src/Logger.cpp
     src/Shader.cpp
