Support Eclipse IDE themes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_executable(haxed
     src/autocomp/Popup.cpp
     src/autocomp/DictionaryProvider.cpp
     src/autocomp/BufferWordProvider.cpp
+    src/ThemeLoader.cpp
     src/Git.cpp
     external/cJSON/cJSON.c
 )
