ImageBuffer: Show color value at cursor in status bar

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ endif()
 
 add_executable(haxed
     src/main.cpp
+    src/types.cpp
     src/common/string.cpp
     src/common/file.cpp
     src/modes.cpp
