Implement rendering of command menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ add_executable(haxed
     src/Split.cpp
     src/Image.cpp
     src/Timer.cpp
+    src/Prompt.cpp
     src/dialogs/Dialog.cpp
     src/dialogs/MessageDialog.cpp
     src/dialogs/FileDialog.cpp
