--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/DaveGamble/cJSON
 [submodule "external/LspCpp"]
 	path = external/LspCpp
-	url = https://github.com/kuafuwang/LspCpp.git
+	url = https://github.com/timre13/LspCpp_custom.git
