--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "external/LspCpp"]
 	path = external/LspCpp
 	url = https://github.com/timre13/LspCpp_custom.git
+[submodule "external/md4c"]
+	path = external/md4c
+	url = https://github.com/mity/md4c.git
